[package]
name = "nginx-car-range"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
form_urlencoded = "1.1.0"
# bytes = { version = "1.4.0", default-features = false }
serde_ipld_dagcbor = {version = "0.2.2", default-features = false }
cid = { version = "0.10.1", default-features = false, features = ["serde-codec"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
anyhow = { version = "1.0.69", default-features = false }
num_enum = { version = "0.5.11", default-features = false }
core2 = { version = "0.4", default-features = false }

[dev-dependencies]
hex = "0.4.3"

[build-dependencies]
bindgen = "0.66"


# help debugging
[profile.release]
debug = true
